# payment-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  dependency.py  main.py  openapi.yaml  pyproject.toml
api/: __init__.py  admin.py  health.py  payments.py  promo.py  webhooks.py
core/: config.py  database.py  events.py  security.py
migrations/: env.py
migrations/versions/: 3e18f3df8288_init_migration.py
models/: __init__.py  payment.py  promo_code.py  promo_code_usage.py
repositories/: base.py  payment.py  promo_code.py  promo_code_usage.py
rpc/proto/: order_service.proto  venue_service.proto
schemas/: admin.py  auth.py  common.py  payment.py  promo.py  queries.py  webhook.py
services/: admin.py  errors.py  grpc_clients.py  order_client.py  payment.py  promo.py  venue_client.py
specs/: WAL.md
specs/common/: payment-specs.md  payments-api.yaml  payments.sql
