[project]
name = "payment-service"
version = "1.0.0"
description = "Payment and Promo Codes Service"
readme = "specs/common/payment-specs.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.4.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "fastapi>=0.109.0",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "structlog>=24.1.0",
    "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "factory-boy>=3.3.0",
    "httpx>=0.26.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "api",
    "core",
    "models",
    "repositories",
    "rpc",
    "schemas",
    "services",
    "dependency.py",
    "main.py",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
